Fix language tab padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="m-0 p-0 flex flex-col items-center text-white bg-gradient-to-b from-[#1e3c72] to-[#2a5298] font-[Roboto,Arial,sans-serif] min-h-screen">
     <div class="weather-background"></div>
     <header class="w-full bg-blue-900 text-white p-5 text-center shadow relative">
-        <div class="language-tabs absolute top-2 left-0 flex gap-1 z-10 pl-[10%] md:pl-[10%] pl-[5%]">
+        <div class="language-tabs absolute top-2 left-0 flex gap-1 z-10 pl-[5%] md:pl-[10%]">
             <button id="lang-it" class="lang-btn bg-white/20 border border-white/30 rounded p-1 transition hover:bg-white/40 hover:scale-105" onclick="switchLanguage('it')">
                 <img src="https://flagcdn.com/w20/it.png" alt="Italian flag" width="20" height="15" class="block w-6 h-4 md:w-6 md:h-4"/>
             </button>
